# Synthesis4AD

./: README.md
3D-DefectStudio/: main.py
3D-DefectStudio/core/: __init__.py  anomaly_core.py  cloud_interaction.py  training_worker.py
3D-DefectStudio/envs/: environment-3dad-gui.yml
3D-DefectStudio/ui/: __init__.py  design_tokens.py  i18n.py  icons.py  main_window.py  ribbon.py  styles.py  viewer.py
MPAS/: __init__.py  mpas.py  pyproject.toml
MPAS/mpas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Simple3D/: README.md  calculate.py  gui.py  main.py  patchcore_runner.py  render_video.py
Simple3D/data/: MiniShiftAD.py  MulSen.py  anomalyshape.py  custom.py  mvtec3d.py  real3d.py
Simple3D/feature_extractors/: CVFH.py  FPFH.py  NARF.py  SHOT.py  Spin.py  Unique_shape.py  features.py  pointnet2_utils.py  shape_context.py
Simple3D/logs/: my_exp.txt  real.txt
Simple3D/utils/: preprocessing.py
